[package]
name = "mrs"
version = "0.1.0"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
description = "Mechanical reasoning system"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
